--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "jshint": "^2.13.4",
+    "lodash": "^4.17.21",
+    "luxon": "^2.3.1",
     "prompt-sync": "^4.2.0",
     "underscore": "^1.13.2"
   }
